[tool.poetry]
name = "cpsc-335-project-1"
version = "0.1.0"
description = "Algorithm Comparison"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.3"
PySimpleGUI = "^5.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
